--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,10 @@
   position: fixed;
   top: 0;
   width: 100%;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 .logo {
